# singularity

./: .bazelrc  .gitignore  WORKSPACE
repos/: BUILD  repos.bzl  rules.bzl  stats.bzl
repos/com/chuusai/shapeless/: BUILD.bazel
repos/com/github/mpilquist/simulacrum/: BUILD.bazel  BUILD.overlay  repository.bzl
repos/eu/timepit/refined/: BUILD.bazel
repos/io/circe/circe/: BUILD.bazel
repos/org/scalacheck/scalacheck/: BUILD.bazel
repos/org/scalamacros/paradise/: BUILD.bazel  BUILD.overlay  repository.bzl
repos/org/scalatest/scalatest/: BUILD.bazel  BUILD.overlay  go_away_testng.scala  repository.bzl
repos/org/scalatest/scalatest/fake_deps/: ant.scala  pegdown.scala
repos/org/spire_math/kind_projector/: BUILD.bazel
repos/org/typelevel/cats/: BUILD.bazel  BUILD.overlay  KittyCoreBoiler.scala  KittyKernelBoiler.scala.overlay  repository.bzl  sbt.scala.overlay
repos/org/typelevel/machinist/: BUILD.bazel  BUILD.overlay  repository.bzl
repos/org/typelevel/macro_compat/: BUILD.bazel  BUILD.overlay  repository.bzl
rules/: scala_addendum.bzl
scripts/: graph.sh
tools/: bazel  gen-ignores.sh
