load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_binary",
    "scala_library",
)
load(
    "@io_higherkindness_singularity//rules:scala_addendum.bzl",
    "make_srcjar",
)

_common_scalacopts = [
    "-deprecation",
    "-encoding",
    "UTF-8",
    "-feature",
    "-unchecked",
    "-Xfatal-warnings",
    "-Xfuture",
    "-Yno-adapted-args",
    "-Ywarn-dead-code",
    "-Ywarn-inaccessible",
    "-Ywarn-nullary-override",
    "-Ywarn-nullary-unit",
    "-Ywarn-numeric-widen",
    "-Xlint:-unused",
    "-Ywarn-infer-any",
    "-Ywarn-unused-import",
    "-Ywarn-unused:-patvars,-implicits,-locals,-privates,-explicits",
]

alias(
    name = repository_name()[1:],
    actual = ":core",
    visibility = ["//visibility:public"],
)

scala_library(
    name = "core",
    srcs = glob([
        "src/main/scala/**/*.scala",
        "jvm/src/main/scala/**/*.scala",
    ]),
    scalacopts = _common_scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "//external:sbt_test_interface",  # eep!
    ],
)
