load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
    "scala_test",
)

_common_scalacopts = [
    "-Xfatal-warnings",
    "-Xlint",
    "-feature",
    "-language:higherKinds",
    "-deprecation",
    "-unchecked",
]

scala_library(
    name = "org_spire_math_kind_projector",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    resource_jars = [
        ":resources",
    ],
    scalacopts = _common_scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "@scala_scala_compiler//jar",
        "@scala_scala_reflect//jar",
    ],
)

test_suite(
    name = "test_suite",
    tests = [
        ":test",
    ],
    visibility = ["//visibility:public"],
)

scala_test(
    name = "test",
    size = "small",
    srcs = glob([
        "src/test/scala/**/*.scala",
    ]),
    plugins = [
        ":org_spire_math_kind_projector",
    ],
    scalacopts = _common_scalacopts,
    runtime_deps = [
        "@hamcrest_core//jar",
        "@junit_interface//jar",
    ],
    deps = [
        "@junit//jar",
    ],
)

java_binary(
    name = "resources",
    classpath_resources = [
        "src/main/resources/scalac-plugin.xml",
    ],
    create_executable = False,
)
