load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
    "scala_test",
)

_common_scalacopts = [
    "-Xfatal-warnings",
    "-Xlint",
    "-feature",
    "-language:higherKinds",
    "-deprecation",
    "-unchecked",
]

alias(
    name = repository_name()[1:],
    actual = ":plugin",
    visibility = ["//visibility:public"],
)

scala_library(
    name = "plugin",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    resource_jars = [
        ":resources",
    ],
    scalacopts = _common_scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "//external:scala_compiler",
        "//external:scala_reflect",
    ],
)

test_suite(
    name = "test_suite",
    tests = [
        ":test",
    ],
    visibility = ["//visibility:public"],
)

scala_test(
    name = "test",
    size = "small",
    srcs = glob([
        "src/test/scala/**/*.scala",
    ]),
    plugins = [
        ":plugin",
    ],
    scalacopts = _common_scalacopts,
    runtime_deps = [
        "@hamcrest_core//jar",
        "@junit_interface//jar",
    ],
    deps = [
        "@junit//jar",
    ],
)

java_binary(
    name = "resources",
    classpath_resources = [
        "src/main/resources/scalac-plugin.xml",
    ],
    create_executable = False,
)
