load(
    "@rules_scala_annex//rules:scala.bzl", 
    "scala_library",    
)

scala_library(
    name = "org_typelevel_machinist",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    deps = [
         "@scala_scala_reflect//jar",
    ],
    macro = True,
    visibility = ["//visibility:public"],
)

scala_library(
    name = "example",
    srcs = glob([
        "src/test/scala/**/*.scala",
    ]),
    deps = [
         "@org_typelevel_machinist",
    ],    
    visibility = ["//visibility:public"],
)
