load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
)

scala_library(
    name = "org_typelevel_machinist",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    macro = True,
    visibility = ["//visibility:public"],
    deps = [
        "@scala_scala_reflect//jar",
    ],
)

scala_library(
    name = "example",
    srcs = glob([
        "src/test/scala/**/*.scala",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@org_typelevel_machinist",
    ],
)
