load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
)

alias(
    name = repository_name()[1:],
    actual = ":core",
    visibility = ["//visibility:public"],
)

scala_library(
    name = "core",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    macro = True,
    visibility = ["//visibility:public"],
    deps = [
        "//external:scala_reflect",
    ],
)

scala_library(
    name = "example",
    srcs = glob([
        "src/test/scala/**/*.scala",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@org_typelevel_machinist",
    ],
)
