load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
    "scala_test",
)

_common_scalacopts = [
    "-feature",
    "-language:higherKinds",
    "-language:implicitConversions",
    "-unchecked",
    "-deprecation",
]

_common_deps = [
    "@scala_scala_reflect//jar",
    "@scala_scala_compiler//jar",
]

alias(
    name = repository_name()[1:],
    actual = ":core",
    visibility = ["//visibility:public"],
)

scala_library(
    name = "core",
    srcs = glob([
        "core/src/main/scala_2.11+/**/*.scala",
    ]),
    macro = True,
    scalacopts = _common_scalacopts,
    visibility = ["//visibility:public"],
    deps = _common_deps,
)

scala_library(
    name = "test_src",
    srcs = glob([
        "test/src/main/scala/**/*.scala",
    ]),
    macro = True,
    scalacopts = _common_scalacopts,
    visibility = ["//visibility:public"],
    deps = _common_deps + [
        "@org_typelevel_macro_compat",
    ],
)

test_suite(
    name = "test_suite",
    tests = [
        ":test",
    ],
    visibility = ["//visibility:public"],
)

scala_test(
    name = "test",
    size = "small",
    srcs = glob([
        "test/src/test/scala/**/*.scala",
    ]),
    scalacopts = _common_scalacopts,
    runtime_deps = [
        "@hamcrest_core//jar",
        "@junit_interface//jar",
    ],
    deps = _common_deps + [
        ":test_src",
        "@junit//jar",
    ],
)
