load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
    "scala_test",
)

_scalacopts = [
    "-deprecation",
    "-feature",
    "-language:higherKinds",
    "-language:implicitConversions",
]

scala_library(
    name = "com_github_mpilquist_simulacrum",
    srcs = glob([
        "core/src/main/scala/**/*.scala",
    ]),
    macro = True,
    plugins = [
        "@org_scalamacros_paradise",
    ],
    scalacopts = _scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "@org_typelevel_macro_compat",
    ],
)

scala_test(
    name = "test",
    srcs = glob([
        "core/src/test/scala/**/*.scala",
    ]),
    plugins = [
        "@org_scalamacros_paradise",
    ],
    scalacopts = _scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mpilquist_simulacrum",
        "@org_scalatest_scalatest",
    ],
)
