load(
    "@rules_scala_annex//rules:scala.bzl",
    "scala_library",
    "scala_test",
)

_scalacopts = [
    "-deprecation",
    "-feature",
    "-language:higherKinds",
    "-language:implicitConversions",
]

alias(
    name = repository_name()[1:],
    actual = ":core",
    visibility = ["//visibility:public"],
)

scala_library(
    name = "core",
    srcs = glob([
        "core/src/main/scala/**/*.scala",
    ]),
    macro = True,
    plugins = [
        "@org_scalamacros_paradise",
    ],
    scalacopts = _scalacopts,
    visibility = ["//visibility:public"],
    deps = [
        "@org_typelevel_macro_compat",
    ],
)

test_suite(
    name = "test_suite",
    tests = [
        ":test",
    ],
    visibility = ["//visibility:public"],
)

scala_test(
    name = "test",
    srcs = glob([
        "core/src/test/scala/**/*.scala",
    ]),
    plugins = [
        "@org_scalamacros_paradise",
    ],
    scalacopts = _scalacopts,
    deps = [
        ":core",
        "@org_scalatest_scalatest",
    ],
)
